[package]
name = "ktsl_tool"
version = "0.1.0"
authors = ["Raytwo <raytwost@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.0"
binread = "1.4"
binwrite = "0.2.1"
#modular-bitfield = "0.10"
structopt = "0.3.20"
walkdir = "2.3.1"